Separated the SignIn logic from the LoginActivity. Created SignInFragment and SignUpFragment.
Created SignInFragment class to manage the sign in of the user; created the SignUpFragment class to manage the sign up of new users

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,9 @@
     <string name="title_activity_login">LoginActivity</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
+    <string name="action_sign_in">Sign in</string>
+    <string name="action_register">Register</string>
+    <string name="action_sign_up">Sign Up</string>
     <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
@@ -15,4 +16,12 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_search">Search</string>
     <string name="title_groups">Groups</string>
+    <string name="label_first_name">First Name</string>
+    <string name="label_last_name">Last Name</string>
+    <string name="label_password">Password</string>
+    <string name="label_email">Email</string>
+    <string name="hint_first_name">Enter your First Name</string>
+    <string name="hint_last_name">Enter your Last Name</string>
+    <string name="hint_email">Enter your Email</string>
+    <string name="hint_password">Enter a Password</string>
 </resources>
