--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="label_password">Password</string>
     <string name="label_email">Email</string>
     <string name="label_settings">Settings</string>
+    <string name="label_search">Search</string>
     <!--Hints-->
     <string name="hint_first_name">Enter your First Name</string>
     <string name="hint_last_name">Enter your Last Name</string>
