--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,9 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
+    <!--Symbols-->
+    <string name="symbol_date_time_join">\@</string>
+
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
