--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,9 +23,11 @@
     <string name="action_search_tags">By Tags</string>
     <string name="action_view_schedule">Schedule</string>
     <string name="action_add_time">Add Time</string>
+    <string name="action_cancel">Cancel</string>
+    <string name="action_save">Save</string>
     <!--Requests-->
     <string name="question_sign_out">Sign Out?</string>
-<!---->
+    <!---->
     <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
@@ -43,6 +45,10 @@
     <string name="label_email">Email</string>
     <string name="label_settings">Settings</string>
     <string name="label_search">Search</string>
+    <string name="label_title">Title</string>
+    <string name="label_details">Details</string>
+    <string name="label_time">Time</string>
+    <string name="label_date">Date</string>
     <!--Hints-->
     <string name="hint_first_name">Enter your First Name</string>
     <string name="hint_last_name">Enter your Last Name</string>
@@ -67,5 +73,7 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
