Modificacion de la interfaz de los horarios
Creado los atributos para la informacion y para la date,

Modicado navigation_group.xml para que pueda pasar al objeto AbstractScheduleItem.

Falta modificar el comportamiento con lo del el AbstractScheduleItem que se pasa por el navigation y tambien terminar de implementar la forma de agregar en el GroupViewModel. ademas de ver como hacer para distinguir si es para modificar o para agregar.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
     <string name="invalid_first_name">Invalid First Name</string>
     <string name="invalid_last_name">Invalid Last Name</string>
     <string name="invalid_email">Invalid Email</string>
+    <string name="invalid_title">Invalid Title</string>
+    <string name="invalid_detail">Invalid Detail</string>
 
 
     <string name="login_failed">"Login failed"</string>
