Terminada la parte de Agregar Horarios!!!!!!!!
El orden en que los horarios aparecen es de acuerdo a la fecha y la hora.
Si se inserta un horario, este es insertado en la lista en el lugar correspondiente, de acuerdo a su fecha y hora.

La implementación para modificar un horario también esta terminada.

Falta:
- Implementar la interfaz OnItemListener de MySchedulesListFragment, MyScheduleRecyclerViewAdapter para saber cual es el horario a Borrar y/o Borrar.
- Implementar Lectura y Escritura de los horarios a Firestore.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,10 @@
     <string name="result_wrong_password">Invalid Password</string>
     <string name="result_no_network_connection">No Network Connection</string>
     <string name="result_logout_successful">Logged Out</string>
+    <string name="result_saved">Saved!</string>
+    <string name="result_update_successful">Update Successful</string>
+    <string name="result_update_failed">Update Failed</string>
+    <!-- -->
     <string name="title_activity_group">GroupActivity</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
