--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <!-- STRINGS -->
     <!--Name of the app-->
     <string name="app_name">SocialVerse</string>
     <!--Titles-->
@@ -81,5 +82,8 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- BOOLEANS -->
+    <bool name="schedule_recycler_view_items_clickable">false</bool>
 
 </resources>
