Created GUI for adding posts, and finished Implementation.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,6 +86,15 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hint_title">Title</string>
+    <string name="hint_message">Message</string>
+    <string name="action_accept">Accept</string>
+    <string name="action_ok">OK</string>
+    <string name="label_message">message</string>
+    <string name="error_add_title">Add a Title</string>
+    <string name="error_add_message">Add a Message</string>
+    <string name="error_short_message">Message must be longer</string>
+    <string name="nothing_here">There is nothing here! Huh!?</string>
 
     <!-- BOOLEANS -->
     <bool name="schedule_recycler_view_items_clickable">false</bool>
